--- a/index.html
+++ b/index.html
@@ -1,37 +1,74 @@
-Welcome
+<!DOCTYPE html>
+<head>
+  <title>Good Dog Day Training</title>
+</head>
+<body>
+  <h1>Welcome to Good Dog Day Training</h1>
 
-"Come home to a happy, well behaved dog"
+  <blockquote>"Come home to a happy, well behaved dog"</blockquote>
 
-We offer dog walking, day training and behaviour consultations, so that life with your best friend is as fun and easy as it should be.
+  <p>We offer dog walking, day training and behaviour consultations, so that life with your best friend is as fun and easy as it should be.</p>
 
-What is day training?
+  <h2>What is day training?</h2>
 
-Traditional dog training lessons often fail because busy owners just don't have several hours a week to spend training their dogs in between lessons. Day training is a fast, effective solution - your trainer can do all the hard work for you. We will typically have 3 - 4 lessons during the week teaching your dog, in addition to a weekly coaching lesson at your convenience where we will show you the progress your dog has made and how to get your dog to listen to you. It's like hiring a dog walker, except your dog learns good behaviour as well as getting exercise. One-on-one training means that we teach only what you want - no time wasted teaching "drop stay" when all you wanted was for your dog to stop pulling on lead! The lessons will be held at your home and parks near you, so your dog learns to behave in the places that really matter. You are very welcome to watch lessons if you wish, or we can teach while you are at work so you can come home to a happy, well behaved dog. Like our regular walks, we will send you an update or video whenever we visit.
+  <p>
+    Traditional dog training lessons often fail because busy owners just don't have several hours a week to spend training their dogs in between lessons. Day training is a fast, effective solution - your trainer can do all the hard work for you. We will typically have 3 - 4 lessons during the week teaching your dog, in addition to a weekly coaching lesson at your convenience where we will show you the progress your dog has made and how to get your dog to listen to you. It's like hiring a dog walker, except your dog learns good behaviour as well as getting exercise. One-on-one training means that we teach only what you want - no time wasted teaching "drop stay" when all you wanted was for your dog to stop pulling on lead! The lessons will be held at your home and parks near you, so your dog learns to behave in the places that really matter. You are very welcome to watch lessons if you wish, or we can teach while you are at work so you can come home to a happy, well behaved dog. Like our regular walks, we will send you an update or video whenever we visit.
+  </p>
 
-We specialise in dog-dog aggression, a very common issue which is not easily addressed with regular training. Rehabilitation relies on lots of calm, structured lessons with friendly dogs and avoiding any triggers which upset your dog - something very hard to arrange in the chaos of real life. In our program we will have an assistant working with a calm therapy dog at the perfect distance for desensitisation, so every interaction your dog has is a good you’re your walks will soon be happy and stress free!
+  <p>
+    We specialise in dog-dog aggression, a very common issue which is not easily addressed with regular training. Rehabilitation relies on lots of calm, structured lessons with friendly dogs and avoiding any triggers which upset your dog - something very hard to arrange in the chaos of real life. In our program we will have an assistant working with a calm therapy dog at the perfect distance for desensitisation, so every interaction your dog has is a good you’re your walks will soon be happy and stress free!
+  </p>
 
-Whatever problem you need help with, we can organise a package deal to suit your needs.
+  <p>
+    Whatever problem you need help with, we can organise a package deal to suit your needs.
+  </p>
 
-Contact us today to find out more or organise your first free lesson.
+  <p>
+    Contact us today to find out more or organise your first free lesson.
+  </p>
 
-Dog walking
+  <h2>
+    Dog walking
+  </h2>
 
-We also offer dog walking, perfect for owners who don’t have much time and dogs who have too much energy. We offer small group walks for social dogs as well as one-on-one walks for those who want more personal attention. We can text you an update and picture whenever we take your dog out. Groups are typically two dogs, and our maximum is four, so you know your dog is always safe and happy.
+  <p>
+    We also offer dog walking, perfect for owners who don’t have much time and dogs who have too much energy. We offer small group walks for social dogs as well as one-on-one walks for those who want more personal attention. We can text you an update and picture whenever we take your dog out. Groups are typically two dogs, and our maximum is four, so you know your dog is always safe and happy.
+  </p>
 
-Prices
+  <h2>
+    Prices
+  </h2>
 
-Your first meeting and walk is completely free.
+  <p>
+    <strong>
+      Your first meeting and walk is completely free.
+    </strong>
+  </p>
 
-Regular 1 hour group walks
-One dog: $25
-Second dog from the same house: add $5.50
+  <h3>
+    Regular 1 hour group walks
+  </h3>
+  <p>
+    One dog: $25 <br />
+    Second dog from the same house: add $5.50
+  </p>
 
-Private 40 minute walks
-One dog: $30
-Second dog from the same house: free
+  <h3>
+    Private 40 minute walks
+  </h3>
+  <p>
+    One dog: $30 <br />
+    Second dog from the same house: free
+  </p>
 
-Shorter and longer walks available, ask us about prices.
+  <p>
+    Shorter and longer walks available, ask us about prices.
+  </p>
 
-Contact information: Stephanie Shaw
-Phone: 0432 768 076
-e-mail: steph@dogdaytraining.com.au
+  <addr>
+  Contact information: Stephanie Shaw <br />
+  Phone: 0432 768 076 <br />
+  e-mail: steph@dogdaytraining.com.au
+  </addr>
+</body>
+</html>
