--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </p>
 
   <p>
-    We specialise in dog-dog aggression, a very common issue which is not easily addressed with regular training. Rehabilitation relies on lots of calm, structured lessons with friendly dogs and avoiding any triggers which upset your dog - something very hard to arrange in the chaos of real life. In our program we will have an assistant working with a calm therapy dog at the perfect distance for desensitisation, so every interaction your dog has is a good you’re your walks will soon be happy and stress free!
+    We specialise in dog-dog aggression, a very common issue which is not easily addressed with regular training. Rehabilitation relies on lots of calm, structured lessons with friendly dogs and avoiding any triggers which upset your dog - something very hard to arrange in the chaos of real life. In our program we will have an assistant working with a calm therapy dog at the perfect distance for desensitisation, so every interaction your dog has i good. Your walks will soon be happy and stress free!
   </p>
 
   <p>
