--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <blockquote>"Come home to a happy, well behaved dog"</blockquote>
 
   <p>We offer dog walking, day training and behaviour consultations, so that life with your best friend is as fun and easy as it should be.</p>
+  <p>We serve customers in East and South East Melbourne.</p>
 
   <h2>What is day training?</h2>
 
